--- a/index.html
+++ b/index.html
@@ -4,6 +4,6 @@
         <title>Abdul-Aziz Fuseini's Portfolio</title>
     </head>
     <body>
-        
+        <h1>aziz</h1>
     </body>
 </html>
