--- a/index.html
+++ b/index.html
@@ -2,8 +2,108 @@
 <html>
     <head>
         <title>Abdul-Aziz Fuseini's Portfolio</title>
+        <style type="text/style">
+
+        </style>
     </head>
     <body>
-        <h1>aziz</h1>
+        <div id="left">
+			<div>
+			<form method="post" onsubmit="return false">
+				<input type="text" id='fullname' name="fullname" placeholder="Your full name">
+				<button onclick="changeName()">Change name</button>
+			</form>
+		</div>
+		<div id="heading">
+			<h1 id="name">Fuseini Abdul-Aziz</h1>
+			<h3>COMPUTER SCIENTIST</h3>
+		</div>
+		<div>
+			<h2 id="profile">PROFILE</h2>
+			<P>I am a young administrative professional who is hungry for knowledge in computer science. I find multiple ways of thinking about an issue, and I like to ask questions. I am also a good team player and a natural leader. I want to be one of the best computer scientists in Ghana, specialised in both software development and database administration. I am looking forward to a career that is both challenging and rewarding.</P>
+		</div>
+		<div>
+			<h2 id="exp">PROFESSIONAL EXPERIENCE</h2>
+		</div>
+		<div>
+            <p><b>THE REPRESENTATIVE OF THE CLASS OF 2022</b></p>
+            <p>Ashesi Students Council | Ashesi University | 2018 - present</p>
+            <ul id="list1">
+            	<li>General representative of Ashesi students to review policies</li>
+				<li>Approve all budgets of the Ashesi Student’s Council</li>
+				<li>Approve judicial and electoral council (JEC) schedule for general meeting</li>
+				<li>Review all documents to be used by the JEC like the vetting rubric etc</li>
+				<li>Vet any new appointment of the executive council once in office</li>
+				<li>Hold the JEC accountable on its duties</li>
+            </ul>
+
+            <p><b>PRESIDENT</b></p>
+            <P>Yendi Students Union | Tamale Senior High School | 2014 - 2015</P>
+            <ul id="list2">
+            	<li>Ensured unity amongst students from Yendi by organizing buses to travel home together</li>
+				<li>Organised extra classes for students from Yendi</li>
+				<li>Supported each member of the union in time of need</li>
+				<li>Encouraged students from Yendi to take leadership roles in the school</li>
+            </ul>
+
+            <p><b>VICE PRESIDENT</b></p>
+            <p>Tamasco Science Students Association | Tamale Senior High School | 2014 - 2015</p>
+
+            <ul id="list3">
+            	<li>Advocate for the welfare of the science student since the school was a science school</li>
+				<li>Organized quizzes amongst the science classes</li>
+				<li>Organized excursions for the science students for them to have first-hand information of what they learn</li>
+            </ul>
+
+		</div>
+		<div>
+			<h2 id="other">OTHER ACTIVITIES</h2>
+			<ul id="list4">
+				<li>I have keen interest in agriculture and global food security</li>
+				<li>I have been a member of the science and maths quiz team of Tamale senior high school</li>
+				<li>I like doing presentations of works i have accomplished</li>
+			</ul>
+		</div>
+		<div>
+			<h2 id="proj">PROJECTS AND RESEARCH</h2>
+			<p><b>TEAM LEADER</b></p>
+			<P>Foundations of Design and Technology | Ashesi University | 2018 - present</P>
+			<ul id="list5">
+				<li>Tackling open defecation in Kwabenya</li>
+				<li>Using design thinking approach to understand the problem and find a lasting solution to the problem</li>
+				<li>If possible, create a business from our research</li>
+			</ul>
+		</div>
+	</div>
+	<div id="right">
+		<div id="picture">
+			<img src="images/profilee.jpg" alt="managing director" id="image" class = "zoom">
+		</div>
+		<h2 id="contact">CONTACT</h2>
+		<P><img src="number.png" alt="number" id="number">&nbsp;&nbsp;0245909372</P>
+		<P><img src="email.png" alt="email" id="email">&nbsp;&nbsp; <a href="abdul.fuseini@ashesi.edu.gh" target = "_blank">abdul.fuseini@ashesi.edu.gh</a></P>
+		<p><img src="linkedin.png" alt="linkedin account" id="linkedin">&nbsp;&nbsp;<a href="https://www.linkedin.com/in/abdul-aziz-fuseini-707b78171/" target="_blank">https://www.linkedin.com/in/abdul-aziz-fuseini-707b78171/</a></p>
+		<p><img src="location.png" alt="location" id="location">&nbsp;&nbsp;Accra, Ghana</p>
+		
+		<h2 id="edu">EDUCATION</h2>
+		<P>BACHELOR OF SCIENCE</P>
+		<P>Computer Science</P>
+		<p>Ashesi University</p>
+		<p>2018 - Present</p>
+
+		<p>WEST AFRICA SENIOR SECONDARY CERTIFICATE EXAMINATION</p>
+		<P>General Science</P>
+		<p>Tamale Senior High School</p>
+		<p>2012 - 2015</p>
+
+		<h2 id="skills">SKILLS</h2>
+		<ul id="list6">
+			<li>Fluent in English (speaking)</li>
+			<li>Programming languages (proficient in python, HTML and CSS)</li>
+			<li>Good at working with people</li>
+		</ul>
+
+	</div>
+	</div>
     </body>
 </html>
