--- a/index.html
+++ b/index.html
@@ -3,25 +3,22 @@
     <head>
         <title>Abdul-Aziz Fuseini's Portfolio</title>
         <style type="text/style">
-
+            .heading{text-align:center;
+	        }
+            
         </style>
     </head>
     <body>
         <div id="left">
-			<div>
-			<form method="post" onsubmit="return false">
-				<input type="text" id='fullname' name="fullname" placeholder="Your full name">
-				<button onclick="changeName()">Change name</button>
-			</form>
-		</div>
-		<div id="heading">
-			<h1 id="name">Fuseini Abdul-Aziz</h1>
-			<h3>COMPUTER SCIENTIST</h3>
-		</div>
-		<div>
-			<h2 id="profile">PROFILE</h2>
-			<P>I am a young administrative professional who is hungry for knowledge in computer science. I find multiple ways of thinking about an issue, and I like to ask questions. I am also a good team player and a natural leader. I want to be one of the best computer scientists in Ghana, specialised in both software development and database administration. I am looking forward to a career that is both challenging and rewarding.</P>
-		</div>
+            <div id="heading">
+			    <h1 id="name">Fuseini Abdul-Aziz</h1>
+			    <h3>COMPUTER SCIENTIST</h3>
+            </div>
+            
+		    <div>
+			    <h2 id="profile">PROFILE</h2>
+			    <P>I am a young administrative professional who is hungry for knowledge in computer science. I find multiple ways of thinking about an issue, and I like to ask questions. I am also a good team player and a natural leader. I want to be one of the best computer scientists in Ghana, specialised in both software development and database administration. I am looking forward to a career that is both challenging and rewarding.</P>
+		    </div>
 		<div>
 			<h2 id="exp">PROFESSIONAL EXPERIENCE</h2>
 		</div>
