--- a/index.html
+++ b/index.html
@@ -5,27 +5,27 @@
         <style type="text/style">
             .heading{text-align:center;
 	        }
-            
+
         </style>
     </head>
     <body>
-        <div id="left">
-            <div id="heading">
-			    <h1 id="name">Fuseini Abdul-Aziz</h1>
+        <div class="left">
+            <div class="heading">
+			    <h1 class="name">Fuseini Abdul-Aziz</h1>
 			    <h3>COMPUTER SCIENTIST</h3>
             </div>
             
 		    <div>
-			    <h2 id="profile">PROFILE</h2>
+			    <h2 class="profile">PROFILE</h2>
 			    <P>I am a young administrative professional who is hungry for knowledge in computer science. I find multiple ways of thinking about an issue, and I like to ask questions. I am also a good team player and a natural leader. I want to be one of the best computer scientists in Ghana, specialised in both software development and database administration. I am looking forward to a career that is both challenging and rewarding.</P>
 		    </div>
 		<div>
-			<h2 id="exp">PROFESSIONAL EXPERIENCE</h2>
+			<h2 class="exp">PROFESSIONAL EXPERIENCE</h2>
 		</div>
 		<div>
             <p><b>THE REPRESENTATIVE OF THE CLASS OF 2022</b></p>
             <p>Ashesi Students Council | Ashesi University | 2018 - present</p>
-            <ul id="list1">
+            <ul class="list1">
             	<li>General representative of Ashesi students to review policies</li>
 				<li>Approve all budgets of the Ashesi Student’s Council</li>
 				<li>Approve judicial and electoral council (JEC) schedule for general meeting</li>
@@ -34,19 +34,19 @@
 				<li>Hold the JEC accountable on its duties</li>
             </ul>
 
-            <p><b>PRESIDENT</b></p>
+            <p><b>PRESclassENT</b></p>
             <P>Yendi Students Union | Tamale Senior High School | 2014 - 2015</P>
-            <ul id="list2">
+            <ul class="list2">
             	<li>Ensured unity amongst students from Yendi by organizing buses to travel home together</li>
 				<li>Organised extra classes for students from Yendi</li>
 				<li>Supported each member of the union in time of need</li>
 				<li>Encouraged students from Yendi to take leadership roles in the school</li>
             </ul>
 
-            <p><b>VICE PRESIDENT</b></p>
+            <p><b>VICE PRESclassENT</b></p>
             <p>Tamasco Science Students Association | Tamale Senior High School | 2014 - 2015</p>
 
-            <ul id="list3">
+            <ul class="list3">
             	<li>Advocate for the welfare of the science student since the school was a science school</li>
 				<li>Organized quizzes amongst the science classes</li>
 				<li>Organized excursions for the science students for them to have first-hand information of what they learn</li>
@@ -54,35 +54,35 @@
 
 		</div>
 		<div>
-			<h2 id="other">OTHER ACTIVITIES</h2>
-			<ul id="list4">
+			<h2 class="other">OTHER ACTIVITIES</h2>
+			<ul class="list4">
 				<li>I have keen interest in agriculture and global food security</li>
 				<li>I have been a member of the science and maths quiz team of Tamale senior high school</li>
 				<li>I like doing presentations of works i have accomplished</li>
 			</ul>
 		</div>
 		<div>
-			<h2 id="proj">PROJECTS AND RESEARCH</h2>
+			<h2 class="proj">PROJECTS AND RESEARCH</h2>
 			<p><b>TEAM LEADER</b></p>
 			<P>Foundations of Design and Technology | Ashesi University | 2018 - present</P>
-			<ul id="list5">
+			<ul class="list5">
 				<li>Tackling open defecation in Kwabenya</li>
 				<li>Using design thinking approach to understand the problem and find a lasting solution to the problem</li>
 				<li>If possible, create a business from our research</li>
 			</ul>
 		</div>
 	</div>
-	<div id="right">
-		<div id="picture">
-			<img src="images/profilee.jpg" alt="managing director" id="image" class = "zoom">
+	<div class="right">
+		<div class="picture">
+			<img src="images/profilee.jpg" alt="managing director" class="image" class = "zoom">
 		</div>
-		<h2 id="contact">CONTACT</h2>
-		<P><img src="number.png" alt="number" id="number">&nbsp;&nbsp;0245909372</P>
-		<P><img src="email.png" alt="email" id="email">&nbsp;&nbsp; <a href="abdul.fuseini@ashesi.edu.gh" target = "_blank">abdul.fuseini@ashesi.edu.gh</a></P>
-		<p><img src="linkedin.png" alt="linkedin account" id="linkedin">&nbsp;&nbsp;<a href="https://www.linkedin.com/in/abdul-aziz-fuseini-707b78171/" target="_blank">https://www.linkedin.com/in/abdul-aziz-fuseini-707b78171/</a></p>
-		<p><img src="location.png" alt="location" id="location">&nbsp;&nbsp;Accra, Ghana</p>
+		<h2 class="contact">CONTACT</h2>
+		<P><img src="number.png" alt="number" class="number">&nbsp;&nbsp;0245909372</P>
+		<P><img src="email.png" alt="email" class="email">&nbsp;&nbsp; <a href="abdul.fuseini@ashesi.edu.gh" target = "_blank">abdul.fuseini@ashesi.edu.gh</a></P>
+		<p><img src="linkedin.png" alt="linkedin account" class="linkedin">&nbsp;&nbsp;<a href="https://www.linkedin.com/in/abdul-aziz-fuseini-707b78171/" target="_blank">https://www.linkedin.com/in/abdul-aziz-fuseini-707b78171/</a></p>
+		<p><img src="location.png" alt="location" class="location">&nbsp;&nbsp;Accra, Ghana</p>
 		
-		<h2 id="edu">EDUCATION</h2>
+		<h2 class="edu">EDUCATION</h2>
 		<P>BACHELOR OF SCIENCE</P>
 		<P>Computer Science</P>
 		<p>Ashesi University</p>
@@ -93,8 +93,8 @@
 		<p>Tamale Senior High School</p>
 		<p>2012 - 2015</p>
 
-		<h2 id="skills">SKILLS</h2>
-		<ul id="list6">
+		<h2 class="skills">SKILLS</h2>
+		<ul class="list6">
 			<li>Fluent in English (speaking)</li>
 			<li>Programming languages (proficient in python, HTML and CSS)</li>
 			<li>Good at working with people</li>
