--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
 	</div>
 	<div class="right">
 		<div class="picture">
-			<img src="images/profilee.jpg" alt="managing director" class="image" class = "zoom">
+			<img src="images/profile.jpg" alt="managing director" class="image" class = "zoom">
 		</div>
 		<h2 class="contact">CONTACT</h2>
 		<P><img src="number.png" alt="number" class="number">&nbsp;&nbsp;0245909372</P>
