--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <title>Abdul-Aziz Fuseini's Portfolio</title>
-        <style type="text/style">
+        <style type="text/css">
             .heading{text-align:center;
 	        }
 
@@ -17,64 +17,15 @@
             
 		    <div>
 			    <h2 class="profile">PROFILE</h2>
-			    <P>I am a young administrative professional who is hungry for knowledge in computer science. I find multiple ways of thinking about an issue, and I like to ask questions. I am also a good team player and a natural leader. I want to be one of the best computer scientists in Ghana, specialised in both software development and database administration. I am looking forward to a career that is both challenging and rewarding.</P>
+                <P>I am a young administrative professional who is hungry for knowledge in computer science. I find multiple ways </P>
+                <p>of thinking about an issue, and I like to ask questions. I am also a good team player and a natural leader. </p>
+                <p>I want to be one of the best computer scientists in Ghana, specialised in both software development and database </p>
+                <p>administration. I am looking forward to a career that is both challenging and rewarding.</p>
 		    </div>
-		<div>
-			<h2 class="exp">PROFESSIONAL EXPERIENCE</h2>
-		</div>
-		<div>
-            <p><b>THE REPRESENTATIVE OF THE CLASS OF 2022</b></p>
-            <p>Ashesi Students Council | Ashesi University | 2018 - present</p>
-            <ul class="list1">
-            	<li>General representative of Ashesi students to review policies</li>
-				<li>Approve all budgets of the Ashesi Student’s Council</li>
-				<li>Approve judicial and electoral council (JEC) schedule for general meeting</li>
-				<li>Review all documents to be used by the JEC like the vetting rubric etc</li>
-				<li>Vet any new appointment of the executive council once in office</li>
-				<li>Hold the JEC accountable on its duties</li>
-            </ul>
-
-            <p><b>PRESclassENT</b></p>
-            <P>Yendi Students Union | Tamale Senior High School | 2014 - 2015</P>
-            <ul class="list2">
-            	<li>Ensured unity amongst students from Yendi by organizing buses to travel home together</li>
-				<li>Organised extra classes for students from Yendi</li>
-				<li>Supported each member of the union in time of need</li>
-				<li>Encouraged students from Yendi to take leadership roles in the school</li>
-            </ul>
-
-            <p><b>VICE PRESclassENT</b></p>
-            <p>Tamasco Science Students Association | Tamale Senior High School | 2014 - 2015</p>
-
-            <ul class="list3">
-            	<li>Advocate for the welfare of the science student since the school was a science school</li>
-				<li>Organized quizzes amongst the science classes</li>
-				<li>Organized excursions for the science students for them to have first-hand information of what they learn</li>
-            </ul>
-
-		</div>
-		<div>
-			<h2 class="other">OTHER ACTIVITIES</h2>
-			<ul class="list4">
-				<li>I have keen interest in agriculture and global food security</li>
-				<li>I have been a member of the science and maths quiz team of Tamale senior high school</li>
-				<li>I like doing presentations of works i have accomplished</li>
-			</ul>
-		</div>
-		<div>
-			<h2 class="proj">PROJECTS AND RESEARCH</h2>
-			<p><b>TEAM LEADER</b></p>
-			<P>Foundations of Design and Technology | Ashesi University | 2018 - present</P>
-			<ul class="list5">
-				<li>Tackling open defecation in Kwabenya</li>
-				<li>Using design thinking approach to understand the problem and find a lasting solution to the problem</li>
-				<li>If possible, create a business from our research</li>
-			</ul>
-		</div>
-	</div>
+	    </div>
 	<div class="right">
 		<div class="picture">
-			<img src="images/profile.jpg" alt="managing director" class="image" class = "zoom">
+			<img src="images/profilee.jpg" alt="managing director" class="image" class = "zoom">
 		</div>
 		<h2 class="contact">CONTACT</h2>
 		<P><img src="number.png" alt="number" class="number">&nbsp;&nbsp;0245909372</P>
