--- a/index.html
+++ b/index.html
@@ -25,31 +25,11 @@
 	    </div>
 	<div class="right">
 		<div class="picture">
-			<img src="images/profilee.jpg" alt="managing director" class="image" class = "zoom">
+			<img src="images/profilee.JPG" alt="managing director" class="image" class = "zoom">
 		</div>
 		<h2 class="contact">CONTACT</h2>
-		<P><img src="number.png" alt="number" class="number">&nbsp;&nbsp;0245909372</P>
-		<P><img src="email.png" alt="email" class="email">&nbsp;&nbsp; <a href="abdul.fuseini@ashesi.edu.gh" target = "_blank">abdul.fuseini@ashesi.edu.gh</a></P>
 		<p><img src="linkedin.png" alt="linkedin account" class="linkedin">&nbsp;&nbsp;<a href="https://www.linkedin.com/in/abdul-aziz-fuseini-707b78171/" target="_blank">https://www.linkedin.com/in/abdul-aziz-fuseini-707b78171/</a></p>
 		<p><img src="location.png" alt="location" class="location">&nbsp;&nbsp;Accra, Ghana</p>
-		
-		<h2 class="edu">EDUCATION</h2>
-		<P>BACHELOR OF SCIENCE</P>
-		<P>Computer Science</P>
-		<p>Ashesi University</p>
-		<p>2018 - Present</p>
-
-		<p>WEST AFRICA SENIOR SECONDARY CERTIFICATE EXAMINATION</p>
-		<P>General Science</P>
-		<p>Tamale Senior High School</p>
-		<p>2012 - 2015</p>
-
-		<h2 class="skills">SKILLS</h2>
-		<ul class="list6">
-			<li>Fluent in English (speaking)</li>
-			<li>Programming languages (proficient in python, HTML and CSS)</li>
-			<li>Good at working with people</li>
-		</ul>
 
 	</div>
 	</div>
