--- a/index.html
+++ b/index.html
@@ -5,33 +5,49 @@
         <style type="text/css">
             .heading{text-align:center;
 	        }
+            .container{display:flex;
+		        margin: 0 auto;
+		        width: 80%;
+		        padding: 0 15px;
+	        }
+            .left{flex:2;}
+	        .right{flex:1;
+		        background-color: #F1F0F0;
+		        padding-left: 50px;}
+	        .image{border-radius: 200px;
+		        width:250px;
+		        height: 250px;
+	        }
+            .picture{padding: 50px;
+	        }
 
         </style>
     </head>
     <body>
-        <div class="left">
-            <div class="heading">
-			    <h1 class="name">Fuseini Abdul-Aziz</h1>
-			    <h3>COMPUTER SCIENTIST</h3>
-            </div>
+        <div class="container" style="display:none;">
+            <div class="left">
+                <div class="heading">
+			        <h1 class="name">Fuseini Abdul-Aziz</h1>
+			        <h3>COMPUTER SCIENTIST</h3>
+                </div>
             
-		    <div>
-			    <h2 class="profile">PROFILE</h2>
-                <P>I am a young administrative professional who is hungry for knowledge in computer science. I find multiple ways </P>
-                <p>of thinking about an issue, and I like to ask questions. I am also a good team player and a natural leader. </p>
-                <p>I want to be one of the best computer scientists in Ghana, specialised in both software development and database </p>
-                <p>administration. I am looking forward to a career that is both challenging and rewarding.</p>
-		    </div>
-	    </div>
-	<div class="right">
-		<div class="picture">
-			<img src="images/profilee.JPG" alt="managing director" class="image" class = "zoom">
-		</div>
-		<h2 class="contact">CONTACT</h2>
-		<p><img src="linkedin.png" alt="linkedin account" class="linkedin">&nbsp;&nbsp;<a href="https://www.linkedin.com/in/abdul-aziz-fuseini-707b78171/" target="_blank">https://www.linkedin.com/in/abdul-aziz-fuseini-707b78171/</a></p>
-		<p><img src="location.png" alt="location" class="location">&nbsp;&nbsp;Accra, Ghana</p>
-
-	</div>
-	</div>
+		        <div>
+			        <h2 class="profile">PROFILE</h2>
+                    <P>I am a young administrative professional who is hungry for knowledge in computer science. I find multiple ways </P>
+                    <p>of thinking about an issue, and I like to ask questions. I am also a good team player and a natural leader. </p>
+                    <p>I want to be one of the best computer scientists in Ghana, specialised in both software development and database </p>
+                    <p>administration. I am looking forward to a career that is both challenging and rewarding.</p>
+		        </div>
+	        </div>
+	        <div class="right">
+		        <div class="picture">
+			        <img src="images/profilee.JPG" alt="managing director" class="image" class = "zoom">
+		        </div>
+		        <h2 class="contact">CONTACT</h2>
+		        <p><img src="linkedin.png" alt="linkedin account" class="linkedin">&nbsp;&nbsp;<a href="https://www.linkedin.com/in/abdul-aziz-fuseini-707b78171/" target="_blank">https://www.linkedin.com/in/abdul-aziz-fuseini-707b78171/</a></p>
+		        <p><img src="location.png" alt="location" class="location">&nbsp;&nbsp;Accra, Ghana</p>
+	        </div>
+        </div>
+    </div>
     </body>
 </html>
