--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         </style>
     </head>
     <body>
-        <div class="container" style="display:none;">
+        <!-- <div class="container" style="display:none;"> -->
             <div class="left">
                 <div class="heading">
 			        <h1 class="name">Fuseini Abdul-Aziz</h1>
@@ -48,6 +48,6 @@
 		        <p><img src="location.png" alt="location" class="location">&nbsp;&nbsp;Accra, Ghana</p>
 	        </div>
         </div>
-    </div>
+    <!-- </div> -->
     </body>
 </html>
