--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 		        width: 80%;
 		        padding: 0 15px;
 	        }
-            /* .left{flex:2;}
+             .left{flex:2;}
 	        .right{flex:1;
 		        background-color: #F1F0F0;
 		        padding-left: 50px;}
@@ -19,7 +19,7 @@
 		        height: 250px;
 	        }
             .picture{padding: 50px;
-	        } */
+	        } 
 
         </style>
     </head>
