--- a/index.html
+++ b/index.html
@@ -20,7 +20,14 @@
 	        }
             .picture{padding: 50px;
 	        } 
-
+            .profile{color:blue;
+		        letter-spacing:5px;
+	        }
+	        .location{height:20px;
+		        width:20px;
+	        }
+	        .linkedin{height:20px;
+		        width:20px;}
         </style>
     </head>
     <body>
