--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         </style>
     </head>
     <body>
-        <!-- <div class="container" style="display:none;"> -->
+        <div class="container" style="display:none;">
             <div class="left">
                 <div class="heading">
 			        <h1 class="name">Fuseini Abdul-Aziz</h1>
@@ -41,8 +41,8 @@
 		        <div>
 			        <h2 class="profile">PROFILE</h2>
                     <P>I am a young administrative professional who is hungry for knowledge in computer science. I find multiple ways </P>
-                    <p>of thinking about an issue, and I like to ask questions. I am also a good team player and a natural leader. </p>
-                    <p>I want to be one of the best computer scientists in Ghana, specialised in both software development and database </p>
+                    <p>of thinking about an issue, and I like to ask questions. I am also a good team player and a natural leader. I</p>
+                    <p>want to be one of the best computer scientists in Ghana, specialised in both software development and database </p>
                     <p>administration. I am looking forward to a career that is both challenging and rewarding.</p>
 		        </div>
 	        </div>
@@ -55,6 +55,6 @@
 		        <p><img src="location.png" alt="location" class="location">&nbsp;&nbsp;Accra, Ghana</p>
 	        </div>
         </div>
-    <!-- </div> -->
+    </div>
     </body>
 </html>
