--- a/index.html
+++ b/index.html
@@ -6,13 +6,11 @@
             .heading{text-align:center;
 	        }
             .container{display:flex;
-		        
-	        }
-            .left{flex:2;
-                margin: 0 auto;
+		        margin: 0 auto;
 		        width: 80%;
 		        padding: 0 15px;
-            }
+	        }
+            .left{flex:2;}
 	        .right{flex:1;
 		        background-color: #F1F0F0;
 		        padding-left: 50px;}
