--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         </style>
     </head>
     <body>
-        <div class="container" style="display:none;">
+        <div class="container">
             <div class="left">
                 <div class="heading">
 			        <h1 class="name">Fuseini Abdul-Aziz</h1>
