--- a/index.html
+++ b/index.html
@@ -13,7 +13,9 @@
             .left{flex:2;}
 	        .right{flex:1;
 		        background-color: #F1F0F0;
-		        padding-left: 50px;}
+		        padding-left: 50px;
+                padding-top: 50px;
+                }
 	        .image{border-radius: 200px;
 		        width:250px;
 		        height: 250px;
