--- a/index.html
+++ b/index.html
@@ -46,7 +46,14 @@
                     <p>of thinking about an issue, and I like to ask questions. I am also a good team player and a natural leader. I</p>
                     <p>want to be one of the best computer scientists in Ghana, specialised in both software development and database </p>
                     <p>administration. I am looking forward to a career that is both challenging and rewarding.</p>
-		        </div>
+                </div>
+                <div>
+                    <button onclick="changeName()">Skills</button>
+                    <button onclick="changeName()">CS Coursework</button>
+                    <button onclick="changeName()">Work and Experience</button>
+                    <button onclick="changeName()">Projects</button>
+                    <button onclick="changeName()">Interest and activities</button>
+                </div>
 	        </div>
 	        <div class="right">
 		        <div class="picture">
