--- a/index.html
+++ b/index.html
@@ -48,11 +48,11 @@
                     <p>administration. I am looking forward to a career that is both challenging and rewarding.</p>
                 </div>
                 <div>
-                    <button onclick="changeName()">Skills</button>
-                    <button onclick="changeName()">CS Coursework</button>
-                    <button onclick="changeName()">Work and Experience</button>
-                    <button onclick="changeName()">Projects</button>
-                    <button onclick="changeName()">Interest and activities</button>
+                    <button onclick="changeName()">Skills</button><br>
+                    <button onclick="changeName()">CS Coursework</button><br>
+                    <button onclick="changeName()">Work and Experience</button><br>
+                    <button onclick="changeName()">Projects</button><br>
+                    <button onclick="changeName()">Interest and activities</button><br>
                 </div>
 	        </div>
 	        <div class="right">
