--- a/index.html
+++ b/index.html
@@ -48,15 +48,11 @@
                     <p>administration. I am looking forward to a career that is both challenging and rewarding.</p>
                 </div>
                 <div>
-                    <button onclick="changeName()">Skills</button><br>
-                    <br>
-                    <button onclick="changeName()">CS Coursework</button><br>
-                    <br>
-                    <button onclick="changeName()">Work and Experience</button><br>
-                    <br>
-                    <button onclick="changeName()">Projects</button><br>
-                    <br>
-                    <button onclick="changeName()">Interest and activities</button><br>
+                    <button onclick="changeName()" style="margin:5px;">Skills</button><br>
+                    <button onclick="changeName()" style="margin:5px;">CS Coursework</button><br>
+                    <button onclick="changeName()" style="margin:5px;">Work and Experience</button><br>
+                    <button onclick="changeName()" style="margin:5px;">Projects</button><br>
+                    <button onclick="changeName()" style="margin:5px;">Interest and activities</button><br>
                 </div>
 	        </div>
 	        <div class="right">
