--- a/index.html
+++ b/index.html
@@ -48,11 +48,11 @@
                     <p>administration. I am looking forward to a career that is both challenging and rewarding.</p>
                 </div>
                 <div>
-                    <button onclick="changeName()" style="margin:5px;">Skills</button><br>
-                    <button onclick="changeName()" style="margin:5px;">CS Coursework</button><br>
-                    <button onclick="changeName()" style="margin:5px;">Work and Experience</button><br>
-                    <button onclick="changeName()" style="margin:5px;">Projects</button><br>
-                    <button onclick="changeName()" style="margin:5px;">Interest and activities</button><br>
+                    <a href="skills.html"><button onclick="changeName()" style="margin:5px;">Skills</button></a><br>
+                    <a href="projects.html"></a><button onclick="changeName()" style="margin:5px;">Projects</button></a><br>
+                    <a href="coursework.html"></a><button onclick="changeName()" style="margin:5px;">CS Coursework</button></a><br>
+                    <a href="work.html"></a><button onclick="changeName()" style="margin:5px;">Work and Experience</button></a><br>
+                    <a href="interest.html"></a><button onclick="changeName()" style="margin:5px;">Interest and activities</button></a><br>
                 </div>
 	        </div>
 	        <div class="right">
