--- a/index.html
+++ b/index.html
@@ -60,11 +60,11 @@
 		            </ul>
                 </div>
                 <div>
-                    <a href="skills.html"><button style="margin:5px;">Skills</button></a><br>
-                    <a href="projects.html"></a><button style="margin:5px;">Projects</button></a><br>
-                    <a href="coursework.html"></a><button style="margin:5px;">CS Coursework</button></a><br>
-                    <a href="work.html"></a><button style="margin:5px;">Work and Experience</button></a><br>
-                    <a href="interest.html"></a><button style="margin:5px;">Interest and activities</button></a><br>
+                    <a href="files/skills.html"><button style="margin:5px;">Skills</button></a><br>
+                    <a href="files/projects.html"></a><button style="margin:5px;">Projects</button></a><br>
+                    <a href="files/coursework.html"></a><button style="margin:5px;">CS Coursework</button></a><br>
+                    <a href="files/work.html"></a><button style="margin:5px;">Work and Experience</button></a><br>
+                    <a href="files/interest.html"></a><button style="margin:5px;">Interest and activities</button></a><br>
                 </div>
 	        </div>
 	        <div class="right">
