--- a/index.html
+++ b/index.html
@@ -39,25 +39,12 @@
 			        <h1 class="name">Fuseini Abdul-Aziz</h1>
 			        <h3>COMPUTER SCIENTIST</h3>
                 </div>
-            
-		        <div>
-			        <h2 class="edu">EDUCATION</h2>
-		            <P>BACHELOR OF SCIENCE</P>
-		            <P>Computer Science</P>
-		            <p>Ashesi University</p>
-		            <p>2018 - Present</p>
-
-		            <p>WEST AFRICA SENIOR SECONDARY CERTIFICATE EXAMINATION</p>
-		            <P>General Science</P>
-		            <p>Tamale Senior High School</p>
-		            <p>2012 - 2015</p>
-
-		            <h2 class="edu">SKILLS</h2>
-		            <ul class="list6" style="padding-left:30px;">
-			            <li>Fluent in English (speaking)</li>
-			            <li>Programming languages (proficient in python, HTML and CSS)</li>
-			            <li>Good at working with people</li>
-		            </ul>
+                <div>
+			        <h2 class="profile">PROFILE</h2>
+                    <P>I am a young administrative professional who is hungry for knowledge in computer science. I find multiple ways </P>
+                    <p>of thinking about an issue, and I like to ask questions. I am also a good team player and a natural leader. I</p>
+                    <p>want to be one of the best computer scientists in Ghana, specialised in both software development and database </p>
+                    <p>administration. I am looking forward to a career that is both challenging and rewarding.</p>
                 </div>
                 <div>
                     <a href="files/skills.html"><button style="margin:5px;">Skills</button></a><br>
