--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 	        }
             .picture{padding: 50px;
 	        } 
-            .edu{color:blue;
+            .profile{color:blue;
 		        letter-spacing:5px;
 	        }
 	        .location{height:20px;
