--- a/files/skills.html
+++ b/files/skills.html
@@ -22,7 +22,7 @@
 	        }
             .picture{padding: 50px;
 	        } 
-            .profile{color:blue;
+            .edu{color:blue;
 		        letter-spacing:5px;
 	        }
 	        .location{height:20px;
@@ -60,7 +60,7 @@
 		            </ul>
                 </div>
                 <div>
-                    <a href="skills.html"><button style="margin:5px;">Home</button></a><br>
+                    <a href="index.html"><button style="margin:5px;">Home</button></a><br>
                 </div>
 	        </div>
 	        <div class="right">
