--- a/files/skills.html
+++ b/files/skills.html
@@ -60,7 +60,7 @@
 		            </ul>
                 </div>
                 <div>
-                    <a href="index.html"><button style="margin:5px;">Home</button></a><br>
+                    <a href="../index.html"><button style="margin:5px;">Home</button></a><br>
                 </div>
 	        </div>
 	        <div class="right">
