--- a/index.html
+++ b/index.html
@@ -50,8 +50,8 @@
                     <a href="files/skills.html"><button style="margin:5px;">Skills</button></a><br>
                     <a href="files/projects.html"><button style="margin:5px;">Projects</button></a><br>
                     <a href="files/coursework.html"></a><button style="margin:5px;">CS Coursework</button></a><br>
-                    <a href="files/work.html"></a><button style="margin:5px;">Work and Experience</button></a><br>
-                    <a href="files/interest.html"></a><button style="margin:5px;">Interest and activities</button></a><br>
+                    <a href="files/work.html"><button style="margin:5px;">Work and Experience</button></a><br>
+                    <a href="files/interest.html"><button style="margin:5px;">Interest and activities</button></a><br>
                 </div>
 	        </div>
 	        <div class="right">
