--- a/files/interest.html
+++ b/files/interest.html
@@ -41,7 +41,7 @@
                 </div>
             
 		        <div>
-                    <h2 class="other">OTHER ACTIVITIES</h2>
+                    <h2 class="other">INTERESTS & OTHER ACTIVITIES</h2>
                     <ul class="list4" style="padding-left:30px;">
                         <li>I have keen interest in agriculture and global food security</li>
                         <li>I have been a member of the science and maths quiz team of Tamale senior high school</li>
