--- a/files/skills.html
+++ b/files/skills.html
@@ -55,7 +55,7 @@
 		            <h2 class="edu">SKILLS</h2>
 		            <ul class="list6" style="padding-left:30px;">
 			            <li>Fluent in English (speaking)</li>
-			            <li>Programming languages (proficient in python, HTML and CSS)</li>
+			            <li>Programming languages (python[proficient], java[proficient],  C++[good], HTML and CSS)</li>
 			            <li>Good at working with people</li>
 		            </ul>
                 </div>
