--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                 <div>
                     <a href="files/skills.html"><button style="margin:5px;">Skills</button></a><br>
                     <a href="files/projects.html"><button style="margin:5px;">Projects</button></a><br>
-                    <a href="files/work.html"><button style="margin:5px;">CS Coursework</button></a><br>
+                    <a href="files/coursework.html"><button style="margin:5px;">CS Coursework</button></a><br>
                     <a href="files/work.html"><button style="margin:5px;">Work and Experience</button></a><br>
                     <a href="files/interest.html"><button style="margin:5px;">Interest and activities</button></a><br>
                 </div>
