--- a/files/coursework.html
+++ b/files/coursework.html
@@ -43,22 +43,22 @@
 		        <div>
 			        <h2 class="work">CS COURSEWORK</h2>
 		            <P>FIRST YEAR</P>
-		            <a href="https://www.ashesi.edu.gh/academics/programmes/computer-science/computer-science-courses.html#Introduction%20to%20Computing%20&%20Information%20Systems">Introduction to Computing and Information Sustems</a>
-		            <a href="https://www.ashesi.edu.gh/academics/programmes/business-administration/business-administration-courses/3516-foundation-of-design-entrepreneurship-i.html">Foundations of Design and Enterpreneurship</a>
-                    <a href="https://www.ashesi.edu.gh/academics/programmes/business-administration/business-administration-courses/3527-finance-for-non-finance.html">Finance for Non-Finance</a>
-                    <a href="https://www.ashesi.edu.gh/academics/programmes/business-administration/business-administration-courses/3522-microeconomics.html">Microeconomics</a>
+		            <a href="https://www.ashesi.edu.gh/academics/programmes/computer-science/computer-science-courses.html#Introduction%20to%20Computing%20&%20Information%20Systems">Introduction to Computing and Information Sustems</a><br>
+		            <a href="https://www.ashesi.edu.gh/academics/programmes/business-administration/business-administration-courses/3516-foundation-of-design-entrepreneurship-i.html">Foundations of Design and Enterpreneurship</a><br>
+                    <a href="https://www.ashesi.edu.gh/academics/programmes/business-administration/business-administration-courses/3527-finance-for-non-finance.html">Finance for Non-Finance</a><br>
+                    <a href="https://www.ashesi.edu.gh/academics/programmes/business-administration/business-administration-courses/3522-microeconomics.html">Microeconomics</a><br>
 
 		            <p>SECOND YEAR</p>
-		            <a href="https://www.ashesi.edu.gh/academics/programmes/computer-science/computer-science-courses.html#Data%20Structures%20and%20Algorithms">Data Structures & Algorithms</a>
-		            <a href="https://www.ashesi.edu.gh/academics/programmes/computer-science/computer-science-courses.html#Database%20Systems">Database Systems</a>
-                    <a href="https://www.ashesi.edu.gh/academics/programmes/computer-science/computer-science-courses.html#Intermediate%20Computer%20Programming">Intermediate Computer Programming</a>
-                    <a href="https://www.ashesi.edu.gh/academics/programmes/computer-science/computer-science-courses.html#Discrete%20Theory%20and%20Structures">Discrete Theory and Structures</a>
+		            <a href="https://www.ashesi.edu.gh/academics/programmes/computer-science/computer-science-courses.html#Data%20Structures%20and%20Algorithms">Data Structures & Algorithms</a><br>
+		            <a href="https://www.ashesi.edu.gh/academics/programmes/computer-science/computer-science-courses.html#Database%20Systems">Database Systems</a><br>
+                    <a href="https://www.ashesi.edu.gh/academics/programmes/computer-science/computer-science-courses.html#Intermediate%20Computer%20Programming">Intermediate Computer Programming</a><br>
+                    <a href="https://www.ashesi.edu.gh/academics/programmes/computer-science/computer-science-courses.html#Discrete%20Theory%20and%20Structures">Discrete Theory and Structures</a><br>
                     
                     <p>THIRD YEAR</p>
-		            <a href="https://www.ashesi.edu.gh/academics/programmes/computer-science/computer-science-courses.html#Web%20Technologies">Web Technologies</a>
-		            <a href="https://www.ashesi.edu.gh/academics/programmes/computer-science/computer-science-courses.html#Computer%20Organization%20and%20Architecture">Computer Organizations and Architecture</a>
-                    <a href="https://www.ashesi.edu.gh/academics/programmes/computer-science/computer-science-courses.html#Data%20Mining">Data Science</a>
-                    <a href="https://www.ashesi.edu.gh/academics/programmes/business-administration/business-administration-courses/3518-research-methods.html">Research Methods 3</a>
+		            <a href="https://www.ashesi.edu.gh/academics/programmes/computer-science/computer-science-courses.html#Web%20Technologies">Web Technologies</a><br>
+		            <a href="https://www.ashesi.edu.gh/academics/programmes/computer-science/computer-science-courses.html#Computer%20Organization%20and%20Architecture">Computer Organizations and Architecture</a><br>
+                    <a href="https://www.ashesi.edu.gh/academics/programmes/computer-science/computer-science-courses.html#Data%20Mining">Data Science</a><br>
+                    <a href="https://www.ashesi.edu.gh/academics/programmes/business-administration/business-administration-courses/3518-research-methods.html">Research Methods 3</a><br>
 
 		            
                 </div>
